--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@
     display: inline;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
+  
+
 body{
 
     font-family: 'Bilbo Swash Caps', cursive;
@@ -28,12 +34,12 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 8%;
+    padding: 30px;
     background-color: rgb(0, 7, 2, 0.1);
     border-bottom: 1px solid rgb(228, 228, 228, 0.1);
     position: fixed;
     margin-bottom: 35rem;
-    top: 0.3rem;
+    top: 0;
     bottom: 0;
     right: 0;
     left: 0;
@@ -92,14 +98,16 @@ body{
     align-items: center;
     background-image: url('../img/leaf.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-position: 100%;
     position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 
 .hero .content {
     margin: 50px;
-    padding: 300px 450px;
+    padding: 300px 450px 100px;
     text-align: center;
 }
 
@@ -128,4 +136,88 @@ body{
     color:#e4e4e4;
     background-color: #1f2c13;
 }
+
+/* About Us */
+
+.about {
+    color: #a94802;
+    min-height: 100vh;
+    display: inline-block;
+    padding: 8rem 1.4rem;
+    text-align: center;
+}
+
+.about .row{
+    display: flex;
+}
+
+.about .row .about-img{
+    flex: 1 1 35rem;
+}
+
+.about .row .about-img img{
+    width: 100%;
+    border-radius: 15px;
+}
+
+.about .row .content{
+    flex: 1 1 35rem;
+    text-align: left;
+    margin-top: 3rem;
+    margin-left: 4.5rem;
+}
+
+
+.about .row .content h4{
+    font-size: 1.4rem;
+    margin-top: 3rem;
+    color: #e4e4e4;
+}
+
+.about .row .content p{
+    font-size: 0.8rem;
+    color:#9e9e9e;
+    line-height: 1.4rem;
+}
+
+/* Shop */
+
+.shopping {
+    color: #a94802;
+    min-height: 100vh;
+    display: block;
+    padding: 8rem 1.4rem;
+    text-align: center;
+}
+
+.shopping p {
+    color:#9e9e9e;
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+.shopping .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5rem;
+    justify-content: center;
+}
+
+.shopping .row .menu-card{
+    margin: auto;
+    display: inline-grid;
+}
+
+.shopping .row .menu-card img{
+    border-radius: 3rem;
+    width: 20%;
+    justify-content: flex-end;
+}
+
+
+
+
+
+
+
 
