--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,23 @@ body{
     color:#d4903b;
 }
 
+
+.sub-menu{
+  display: inline-block;
+  position: absolute;
+  top: 100%;
+  right: -100%;
+  background-color:#9e9e9e;
+  width: 15rem;
+  height: 10rem;
+}
+
+.sub-menu.active{
+    right: 0;
+}
+
+
+
 /* Hero Section Style */
 
 .hero{
@@ -234,9 +251,10 @@ body{
 }
 
 .shopping .row .menu-card img{
-    border-radius: 10em;
-    width: 15rem;
+    border-radius: 5rem;
+    width: 10rem;
     margin: auto;
+    margin-bottom: 0.5rem;
 }
 
 .shopping .row .menu-body{
